--- a/views/body.ejs
+++ b/views/body.ejs
@@ -1,9 +1,11 @@
 <h1>SH's Blog</h1>
 <nav>
 	<ul>
+	<div class = "menu">
 		<a href="/">HOME</a>
 		<a href="/profile">PROFILE</a>
 		<a href="/posts">BOARD</a>
 		<a href="/about">ABOUT</a>
 	</ul>
+	</div>
 </nav>
