--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,5 @@
 <title>
     SH's Blog
 </title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
  
