--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,10 +6,11 @@
   <body>
     <% include ./body.ejs %>
     <img src="/images/card.jpg" width="300" height="200"><br><br>
-
-    이름: 조승희<br><br>
-    소속: 부산대학교<br><br>
-    전공: 정보컴퓨터공학<br><br>
-    Email: jo9043@gmail.com
+    <div class = "profile">
+      이름: 조승희<br><br>
+      소속: 부산대학교<br><br>
+      전공: 정보컴퓨터공학<br><br>
+      Email: jo9043@gmail.com
+    </div>
   </body>
 </html>
