--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -6,7 +6,8 @@
   <body>
     <% include ../body.ejs %>
     <br>
-     	<div class="board">
+    <div class = "posts">
+     	<div class=" index">
     		<ul>
     			<% data.forEach(function(e){ %>
     			<li>
@@ -17,5 +18,6 @@
     		</ul>	
         <center><a href="posts/new" style ="width:200; height:100; color:black"><button><font color ="black">글쓰기</font></button></a></center>
 	   	</div>
+    </div>
 	</body>
 </html>
